--- a/todolist.html
+++ b/todolist.html
@@ -86,7 +86,7 @@
     <title>To-Do App</title>
 </head>
 <body>
-    <div class="container">
+   <div class="container">
         <h1>Add Your Task Here</h1>
         <div class="input-container">
             <input type="text" id="taskInput" placeholder="Add a new task">
@@ -95,12 +95,14 @@
         <ul id="taskList">
             <!-- Tasks will be added here -->
         </ul>
+        <div id="error" style="color: red;"></div>
     </div>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const taskInput = document.getElementById("taskInput");
             const addTaskButton = document.getElementById("addTask");
             const taskList = document.getElementById("taskList");
+            const errorDiv = document.getElementById("error");
 
             addTaskButton.addEventListener("click", function () {
                 const taskText = taskInput.value.trim();
@@ -113,6 +115,9 @@
                     taskList.appendChild(taskItem);
 
                     taskInput.value = ""; // Clear the input field
+                    errorDiv.textContent = ""; // Clear any previous error messages
+                } else {
+                    errorDiv.textContent = "Please enter a task."; // Show error message
                 }
             });
 
